[package]
name = "simple-rust-proxy"
version = "0.1.0"
authors = ["merv"]
repository = "https://github.com/El-Merovingio/simple-rust-proxy"
license = "Apache-2.0"
homepage = "http://merovingian.us.to/"
edition = "2018"

[dependencies]
warp = "0.3"
reqwest = { version = "0.11", features = ["json"] }
#reqwest = { version = "0.11", features = ["native-tls", "rustls-tls"] } #ssl
tokio = { version = "1", features = ["full"] }
owo-colors = "4.0.0"